--- a/servicios/index.html
+++ b/servicios/index.html
@@ -22,10 +22,15 @@
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
     />
+    <!-- GoogleFonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
+    
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light nav-bar-spsi">
+      <nav class="navbar navbar-expand-lg nav-bar-spsi">
         <div class="container-fluid">
           <div class="container">
             <img src="../img/spsi-logo.png" alt="" />
@@ -43,12 +48,12 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav me-5 mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/">Home</a>
+                <a class="nav-link " aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../servicios/">Servicios</a>
+                <a class="nav-link active" href="../servicios/">Servicios</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link">Clientes</a>
@@ -62,9 +67,9 @@
       </nav>
     </header>
     <main>
-      <div class="container mt-3" style="width: 1200px;">
+      <div class="container mt-4" style="width: 1200px;">
         <div class="intro__title">
-            <h1 class="text-center">Nuestros servicios integrales</h1>
+            <h2 class="text-center">Nuestros servicios integrales</h2>
         </div>
       </div>
       <div class="container d-flex justify-content-center mt-3 px-5" style="width: 1200px;">
@@ -79,7 +84,7 @@
         </div>
       </div>
       <div class="container d-flex justify-content-center mt-3 px-5" style="width: 1200px;">
-        <button type="button" class="btn btn-success btn-lg">Quiero que me contaten</button>
+        <button type="button" class="btn btn-contacto btn-lg">Quiero que me contacten</button>
       </div>
       <div class="container d-flex justify-content-center mt-3 px-5" style="width: 1200px;">
         <!-- Carousel -->
