--- a/index.html
+++ b/index.html
@@ -95,13 +95,16 @@
         </div>
       </div>
       <div class="container d-flex justify-content-center mt-5">
-        <img src="./img/Ing Pascual Fernandez.jpg" alt="" class="img-fluid" />
+        <img src="./img/pascual1.png" alt="" class="img-fluid" width="50%" />
       </div>
-      <div class="container d-flex justify-content-center mt-1">
-        <img src="./img/Lucas Carrera.jpg" alt="" class="img-fluid" />
+      <div class="container d-flex justify-content-center mt-4">
+        <img src="./img/Ariel1.png" alt="" class="img-fluid" width="50%" />
       </div>
-      <div class="container d-flex justify-content-center mt-1 mb-4">
-        <img src="./img/Ing x2.jpg" alt="" class="img-fluid" />
+      <div class="container d-flex justify-content-center mt-4 mb-4">
+        <img src="./img/carlos1.png" alt="" class="img-fluid" width="50%" />
+      </div>
+      <div class="container d-flex justify-content-center mb-4">
+        <img src="./img/javier1.png" alt="" class="img-fluid" width="50%" />
       </div>
     </main>
     <footer class="text-center text-white">
