--- a/servicios/index.html
+++ b/servicios/index.html
@@ -30,7 +30,7 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg nav-bar-spsi">
+      <nav class="navbar navbar-expand-lg navbar-dark nav-bar-spsi">
         <div class="container-fluid">
           <div class="container">
             <img src="../img/spsi-logo.png" alt="" />
