--- a/servicios/index.html
+++ b/servicios/index.html
@@ -67,12 +67,12 @@
       </nav>
     </header>
     <main>
-      <div class="container mt-4" style="width: 1200px;">
+      <div class="container mt-4" >
         <div class="intro__title">
             <h2 class="text-center">Nuestros servicios integrales</h2>
         </div>
       </div>
-      <div class="container d-flex justify-content-center mt-3 px-5" style="width: 1200px;">
+      <div class="container d-flex justify-content-center mt-3 px-5" >
         <div class="mx-4">
           <p class="text-center">
             En SPSI somos asesores de seguridad y te ayudamos a encontrar
@@ -83,10 +83,10 @@
           </p>
         </div>
       </div>
-      <div class="container d-flex justify-content-center mt-3 px-5" style="width: 1200px;">
+      <div class="container d-flex justify-content-center mt-3 px-5" >
         <button type="button" class="btn btn-contacto btn-lg">Quiero que me contacten</button>
       </div>
-      <div class="container d-flex justify-content-center mt-3 px-5" style="width: 1200px;">
+      <div class="container d-flex justify-content-center mt-3 px-5" >
         <!-- Carousel -->
         <div id="demo" class="carousel slide" data-bs-ride="carousel">
           <!-- Indicators/dots -->
@@ -100,38 +100,38 @@
           <!-- The slideshow/carousel -->
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="../img/carrousel/slider 5.png" alt="Los Angeles" class="d-block img-fluid rounded" style="width:100%">
+              <img src="../img/carrousel/slider 5.png" alt="" class="d-block img-fluid rounded" style="width:100%">
               <div class="carousel-caption">
-                <h3>Los Angeles</h3>
-                <p>We had such a great time in LA!</p>
+                <h3></h3>
+                <p></p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="../img/carrousel/slider 1.png" alt="Chicago" class="d-block img-fluid rounded" style="width:100%">
+              <img src="../img/carrousel/slider 1.png" alt="" class="d-block img-fluid rounded" style="width:100%">
               <div class="carousel-caption">
-                <h3>Chicago</h3>
-                <p>Thank you, Chicago!</p>
+                <h3></h3>
+                <p>!</p>
               </div> 
             </div>
             <div class="carousel-item">
-              <img src="../img/carrousel/slider 2.png" alt="New York" class="d-block img-fluid rounded" style="width:100%">
+              <img src="../img/carrousel/slider 2.png" alt="" class="d-block img-fluid rounded" style="width:100%">
               <div class="carousel-caption">
-                <h3>New York</h3>
-                <p>We love the Big Apple!</p>
+                <h3></h3>
+                <p></p>
               </div>  
             </div>
             <div class="carousel-item">
-              <img src="../img/carrousel/slider 3.png" alt="New York" class="d-block img-fluid rounded" style="width:100%">
+              <img src="../img/carrousel/slider 3.png" alt="" class="d-block img-fluid rounded" style="width:100%">
               <div class="carousel-caption">
-                <h3>New York</h3>
-                <p>We love the Big Apple!</p>
+                <h3></h3>
+                <p></p>
               </div>  
             </div>
             <div class="carousel-item">
-              <img src="../img/carrousel/slider 4.png" alt="New York" class="d-block img-fluid rounded" style="width:100%">
+              <img src="../img/carrousel/slider 4.png" alt="" class="d-block img-fluid rounded" style="width:100%">
               <div class="carousel-caption">
-                <h3>New York</h3>
-                <p>We love the Big Apple!</p>
+                <h3></h3>
+                <p></p>
               </div>  
             </div>
           </div>          
