--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <nav class="navbar navbar-expand-lg navbar-dark   nav-bar-spsi">
         <div class="container-fluid">
           <div class="container">
-            <img src="./img/spsi-logo.png" alt=""  class="img-fluid"/> <span class="titulo-principal-web">Sistemas de protección y seguridad</span>
+            <img src="./img/spsi-logo.png" alt=""  class="img-fluid" width="15%"/> <span class="titulo-principal-web">Sistemas de protección y seguridad</span>
             
           </div>
 
@@ -69,7 +69,7 @@
     </header>
     <main>      
       <div class=" justify-content-center">
-        <img src="./img/img-camara.png" alt="" class="img-fluid" height="300px" width="100%" />
+        <img src="./img/img-camara.png" alt="" class="" height="300px" width="100%" />
       </div>
       <div class="container justify-content-center mt-3 intro__title">
         <h1>Nuestra empresa</h1>
