--- a/servicios/index.html
+++ b/servicios/index.html
@@ -33,7 +33,8 @@
       <nav class="navbar navbar-expand-lg navbar-dark nav-bar-spsi">
         <div class="container-fluid">
           <div class="container">
-            <img src="../img/spsi-logo.png" alt="" />
+            <img src="../img/spsi-logo.png" alt=""  class="img-fluid" width="15%"/> <span class="titulo-principal-web">Sistemas de protección y seguridad</span>
+            
           </div>
 
           <button
