--- a/contacto/index.html
+++ b/contacto/index.html
@@ -22,6 +22,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="../img/spsi-logo.png" type="image/x-icon" />
      <!-- Google Fonts -->
      <link rel="preconnect" href="https://fonts.googleapis.com">
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -51,13 +52,13 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-5 mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link " aria-current="page" href="/">Home</a>
+                <a class="nav-link " aria-current="page" href="/">Nosotros</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="../servicios/">Servicios</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link">Clientes</a>
+                <a class="nav-link" href="../clientes/">Clientes</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="../contacto/">Contacto</a>
@@ -74,9 +75,10 @@
             
         </div>
         <div class="container d-flex justify-content-center mt-2 redes" >
-          <img src="../img/logos redes/fb.png" alt="" class="img-fluid">
-          <img src="../img/logos redes/instagram.png" alt="" class="img-fluid">
-          <img src="../img/logos redes/in.png" alt="" class="img-fluid">
+          <a href="https://www.facebook.com/SPSI.arg" target="_blank"><img src="../img/logos redes/fb.png" alt="" class="img-fluid"></a>
+          <a href="https://instagram.com/spsi.ok?igshid=YmMyMTA2M2Y=" target="_blank"><img src="../img/logos redes/instagram.png" alt="" class="img-fluid"></a>
+          <a href="https://www.linkedin.com/company/spsiseguridad" target="_blank"><img src="../img/logos redes/in.png" alt="" class="img-fluid"></a>
+          <a href="https://wa.link/dsv984" target="_blank"><img src="../img/logos redes/whatsapp.png" alt="" class="img-fluid"></a>
         </div>
       </div>
               
@@ -185,21 +187,24 @@
           <!-- Facebook -->
           <a
             class="btn btn-outline-light btn-floating m-1"
-            href="#!"
+            href="https://www.facebook.com/SPSI.arg"
+            target="_blank"
             role="button"
             ><i class="fab fa-facebook-f"></i
           ></a>
           <!-- Instagram -->
           <a
             class="btn btn-outline-light btn-floating m-1"
-            href="#!"
+            href="https://instagram.com/spsi.ok?igshid=YmMyMTA2M2Y="
+            target="_blank"
             role="button"
             ><i class="fab fa-instagram"></i
           ></a>
           <!-- Linkedin -->
           <a
             class="btn btn-outline-light btn-floating m-1"
-            href="#!"
+            href="https://www.linkedin.com/company/spsiseguridad"
+            target="_blank"
             role="button"
             ><i class="fab fa-linkedin-in"></i
           ></a>
