--- a/servicios/index.html
+++ b/servicios/index.html
@@ -22,6 +22,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="../img/spsi-logo.png" type="image/x-icon" />
     <!-- GoogleFonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -51,13 +52,13 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-5 mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link " aria-current="page" href="/">Home</a>
+                <a class="nav-link " aria-current="page" href="/">Nosotros</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="../servicios/">Servicios</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link">Clientes</a>
+                <a class="nav-link" href="../clientes/">Clientes</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="../contacto/">Contacto</a>
@@ -84,10 +85,10 @@
           </p>
         </div>
       </div>
-      <div class="container d-flex justify-content-center mt-3 px-5" >
+      <div class="container d-flex justify-content-center mt-1 px-5" >
         <button type="button" class="btn btn-contacto btn-lg">Quiero que me contacten</button>
       </div>
-      <div class="container d-flex justify-content-center mt-3 px-5" >
+      <div class="container d-flex justify-content-center mt-5 px-5" >
         <!-- Carousel -->
         <div id="demo" class="carousel slide" data-bs-ride="carousel">
           <!-- Indicators/dots -->
@@ -96,40 +97,34 @@
             <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
             <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
             <button type="button" data-bs-target="#demo" data-bs-slide-to="3"></button>
-            <button type="button" data-bs-target="#demo" data-bs-slide-to="4"></button>
+            
           </div>          
           <!-- The slideshow/carousel -->
           <div class="carousel-inner">
+            
             <div class="carousel-item active">
-              <img src="../img/carrousel/slider 5.png" alt="" class="d-block img-fluid rounded" style="width:100%">
-              <div class="carousel-caption">
-                <h3></h3>
-                <p></p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="../img/carrousel/slider 1.png" alt="" class="d-block img-fluid rounded" style="width:100%">
+              <img src="../img/carrousel/1.png" alt="" class="d-block img-fluid rounded" style="width:100%">
               <div class="carousel-caption">
                 <h3></h3>
                 <p>!</p>
               </div> 
             </div>
             <div class="carousel-item">
-              <img src="../img/carrousel/slider 2.png" alt="" class="d-block img-fluid rounded" style="width:100%">
+              <img src="../img/carrousel/2.png" alt="" class="d-block img-fluid rounded" style="width:100%">
               <div class="carousel-caption">
                 <h3></h3>
                 <p></p>
               </div>  
             </div>
             <div class="carousel-item">
-              <img src="../img/carrousel/slider 3.png" alt="" class="d-block img-fluid rounded" style="width:100%">
+              <img src="../img/carrousel/3.png" alt="" class="d-block img-fluid rounded" style="width:100%">
               <div class="carousel-caption">
                 <h3></h3>
                 <p></p>
               </div>  
             </div>
             <div class="carousel-item">
-              <img src="../img/carrousel/slider 4.png" alt="" class="d-block img-fluid rounded" style="width:100%">
+              <img src="../img/carrousel/4.png" alt="" class="d-block img-fluid rounded" style="width:100%">
               <div class="carousel-caption">
                 <h3></h3>
                 <p></p>
@@ -154,21 +149,24 @@
           <!-- Facebook -->
           <a
             class="btn btn-outline-light btn-floating m-1"
-            href="#!"
+            href="https://www.facebook.com/SPSI.arg"
+            target="_blank"
             role="button"
             ><i class="fab fa-facebook-f"></i
           ></a>
           <!-- Instagram -->
           <a
             class="btn btn-outline-light btn-floating m-1"
-            href="#!"
+            href="https://instagram.com/spsi.ok?igshid=YmMyMTA2M2Y="
+            target="_blank"
             role="button"
             ><i class="fab fa-instagram"></i
           ></a>
           <!-- Linkedin -->
           <a
             class="btn btn-outline-light btn-floating m-1"
-            href="#!"
+            href="https://www.linkedin.com/company/spsiseguridad"
+            target="_blank"
             role="button"
             ><i class="fab fa-linkedin-in"></i
           ></a>
