--- a/index.html
+++ b/index.html
@@ -106,8 +106,60 @@
       <div class="container d-flex justify-content-center mb-4">
         <img src="./img/javier1.png" alt="" class="img-fluid" width="85%" />
       </div>
+      <div class="container d-flex justify-content-center mt-5 px-5" >
+        <!-- Carousel -->
+        <div id="demo" class="carousel slide" data-bs-ride="carousel">
+          <!-- Indicators/dots -->
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+            <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+            <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+            <button type="button" data-bs-target="#demo" data-bs-slide-to="3"></button>
+            
+          </div>          
+          <!-- The slideshow/carousel -->
+          <div class="carousel-inner justify-content-center">
+            
+            <div class="carousel-item active">
+              <img src="./img/equipo/1.jpg" alt="" class="d-block img-fluid rounded" style="width:100%">
+              <div class="carousel-caption">
+                <h3></h3>
+                <p>!</p>
+              </div> 
+            </div>
+            <div class="carousel-item">
+              <img src="./img/equipo/2.jpg" alt="" class="d-block img-fluid rounded" style="width:100%">
+              <div class="carousel-caption">
+                <h3></h3>
+                <p></p>
+              </div>  
+            </div>
+            <div class="carousel-item">
+              <img src="./img/equipo/3.jpg" alt="" class="d-block img-fluid rounded" style="width:100%">
+              <div class="carousel-caption">
+                <h3></h3>
+                <p></p>
+              </div>  
+            </div>
+            <div class="carousel-item">
+              <img src="./img/equipo/4.jpg" alt="" class="d-block img-fluid rounded" style="width:100%">
+              <div class="carousel-caption">
+                <h3></h3>
+                <p></p>
+              </div>  
+            </div>
+          </div>          
+          <!-- Left and right controls/icons -->
+          <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+            <span class="carousel-control-next-icon"></span>
+          </button>
+        </div>      
+      </div> 
     </main>
-    <footer class="text-center text-white">
+    <footer class="text-center text-white mt-4">
       <!-- Grid container -->
       <div class="container p-4 pb-0">
         <!-- Section: Social media -->
